@@ -150,13 +150,26 @@
         <directory>test-outputs/target</directory>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+
+                <configuration>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>${allureMaven}</version>
                 <executions>
                     <execution>
                         <phase>test</phase>
-
                     </execution>
                 </executions>
                 <configuration>
@@ -175,6 +188,7 @@
                     <!--  System properties if needed  -->
                 </configuration>
             </plugin>
+            
         </plugins>
     </build>
 </project>
